unpackaged/main/default/objects/Case/fields/Severe__c.field-meta.xml
<CustomField>
    <fullName>Severe__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if case needs immediate attention.</description>
    <label>Severe</label>
    <type>Checkbox</type>
</CustomField>