unpackaged/main/default/objects/Case/fields/Show_Name__c.field-meta.xml
<CustomField>
    <fullName>Show_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Show Name</label>
    <referenceTo>Show__c</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>