unpackaged/main/default/objects/Case/fields/Show_Open_Date__c.field-meta.xml
<CustomField>
    <fullName>Show_Open_Date__c</fullName>
    <formula>Show_Opportunity__r.Show_Open_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Show Open Date</label>
    <type>Date</type>
</CustomField>