unpackaged/main/default/objects/Case/fields/Show_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Show_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Show Opportunity/Project on which user requested service</description>
    <label>Show Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Customer Service Inquiries (Cases)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>