unpackaged/main/default/objects/Case/fields/Show_Status__c.field-meta.xml
<CustomField>
    <fullName>Show_Status__c</fullName>
    <label>Show Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1-Pre</fullName>
            </value>
            <value>
                <fullName>2-Showsite</fullName>
            </value>
            <value>
                <fullName>3-Post</fullName>
            </value>
            <value>
                <fullName>4-Non Tradeshow-N/A</fullName>
            </value>
            <value>
                <fullName>Pre-show</fullName>
            </value>
            <value>
                <fullName>Showsite (Build)</fullName>
            </value>
            <value>
                <fullName>Show Open</fullName>
            </value>
            <value>
                <fullName>Showsite (Breakdown)</fullName>
            </value>
            <value>
                <fullName>Post-show</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>