unpackaged/main/default/objects/Case/fields/Siebel_SR_Number__c.field-meta.xml
<CustomField>
    <fullName>Siebel_SR_Number__c</fullName>
    <externalId>true</externalId>
    <label>Siebel SR Number</label>
    <length>30</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>