unpackaged/main/default/objects/Case/fields/Substatus__c.field-meta.xml
<CustomField>
    <fullName>Substatus__c</fullName>
    <label>Substatus</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>None Required</fullName>
                <default>true</default>
                <label>None Required</label>
            </value>
            <value>
                <fullName>Audit Complete</fullName>
            </value>
            <value>
                <fullName>Audit in Process</fullName>
            </value>
            <value>
                <fullName>File Request From Archivist</fullName>
            </value>
            <value>
                <fullName>Graphics</fullName>
            </value>
            <value>
                <fullName>ICS Complete</fullName>
            </value>
            <value>
                <fullName>Known Error</fullName>
            </value>
            <value>
                <fullName>Order Entered</fullName>
            </value>
            <value>
                <fullName>Pending Expresso Issue</fullName>
            </value>
            <value>
                <fullName>Pending Kit Finalization</fullName>
            </value>
            <value>
                <fullName>Printed by City Office</fullName>
            </value>
            <value>
                <fullName>Waiting for City Response</fullName>
            </value>
            <value>
                <fullName>Waiting for CR/RF Decision</fullName>
            </value>
            <value>
                <fullName>Waiting for Entry</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer - Information</fullName>
            </value>
            <value>
                <fullName>Waiting for Customer - Response</fullName>
            </value>
            <value>
                <fullName>Waiting for Delivery</fullName>
            </value>
            <value>
                <fullName>Waiting for Quote</fullName>
            </value>
            <value>
                <fullName>Waiting for Reroute/Upgrade</fullName>
            </value>
            <value>
                <fullName>Waiting GES Electric Response</fullName>
            </value>
            <value>
                <fullName>Waiting GES Operation Response</fullName>
            </value>
            <value>
                <fullName>Waiting on A/R Process</fullName>
            </value>
            <value>
                <fullName>Waiting on Credit Card Info</fullName>
            </value>
            <value>
                <fullName>Waiting on Files</fullName>
            </value>
            <value>
                <fullName>Waiting on Invoice Breakdown</fullName>
            </value>
            <value>
                <fullName>Waiting on IT Help Desk</fullName>
            </value>
            <value>
                <fullName>Waiting on NSC Support Desk</fullName>
            </value>
            <value>
                <fullName>Waiting on Order Forms</fullName>
            </value>
            <value>
                <fullName>Waiting for Printing</fullName>
            </value>
            <value>
                <fullName>Waiting on Response from Intl</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>