unpackaged/main/default/objects/Case/fields/Time_to_Close__c.field-meta.xml
<CustomField>
    <fullName>Time_to_Close__c</fullName>
    <description>Defines the time between case creation and the case closing.</description>
    <formula>If(AND(NOT(ISBLANK(ClosedDate)), NOT(ISBLANK(CreatedDate))),
   (ClosedDate -  CreatedDate) * 24, 

NULL)</formula>
    <inlineHelpText>The number of hours required to close this case.</inlineHelpText>
    <label>Time to Close</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>