unpackaged/main/default/objects/Case/fields/X3rd_Party_Assignment__c.field-meta.xml
<CustomField>
    <fullName>X3rd_Party_Assignment__c</fullName>
    <description>A text field to identify which 3rd party vendor this case is assigned to.  Values from the 3rd party list field will overwrite a blank value here.</description>
    <label>3rd Party Assignment</label>
    <length>255</length>
    <type>Text</type>
</CustomField>