unpackaged/main/default/objects/Case/recordTypes/EMEA_Exhibitor_List.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Exhibitor_List</fullName>
    <active>true</active>
    <businessProcess>GES EMEA Service</businessProcess>
    <description>Record type to identify EMEA Exhibitor List</description>
    <label>EMEA Exhibitor List</label>
</RecordType>