unpackaged/main/default/objects/Case/recordTypes/EMEA_Salesforce.recordType-meta.xml
<RecordType>
    <fullName>EMEA_Salesforce</fullName>
    <active>true</active>
    <businessProcess>GES EMEA Service</businessProcess>
    <description>EMEA Salesforce Record Type</description>
    <label>EMEA Salesforce</label>
</RecordType>