unpackaged/main/default/objects/Case/recordTypes/GES_EMEA_Visit.recordType-meta.xml
<RecordType>
    <fullName>GES_EMEA_Visit</fullName>
    <active>true</active>
    <businessProcess>GES EMEA Service</businessProcess>
    <label>GES EMEA Visit</label>
</RecordType>