unpackaged/main/default/objects/Case/recordTypes/GES_US_Service.recordType-meta.xml
<RecordType>
    <fullName>GES_US_Service</fullName>
    <active>true</active>
    <businessProcess>GES US Service</businessProcess>
    <description>Default record type for all GES US Cases created by National Servicenter or others in GES US</description>
    <label>GES US Service</label>
</RecordType>