unpackaged/main/default/objects/Case/recordTypes/US_Exhibitor_List.recordType-meta.xml
<RecordType>
    <fullName>US_Exhibitor_List</fullName>
    <active>true</active>
    <businessProcess>GES EMEA Service</businessProcess>
    <description>US record type to hold Exhibitor Lists</description>
    <label>US Exhibitor List</label>
</RecordType>