unpackaged/main/default/objects/Case/validationRules/Case_Required_Account_Name.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Required_Account_Name</fullName>
    <active>true</active>
    <description>Account Name is a required field. This validation rule is required (instead of a required field on page layout) to allow Trigger to default a value for this field based on selected Booth.</description>
    <errorConditionFormula>ISNULL(AccountId)</errorConditionFormula>
    <errorMessage>Account Name is a required field. Please select an account using the look-up.</errorMessage>
</ValidationRule>