unpackaged/main/default/objects/Case/validationRules/Case_Required_Date_Committed.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Required_Date_Committed</fullName>
    <active>false</active>
    <description>Date Committed is required when Priority is First Call Resolution</description>
    <errorConditionFormula>IF(ISPICKVAL(Priority,&#39;First Call Resolution&#39;),IF(ISNULL(Date_Committed__c ), true, false), false)</errorConditionFormula>
    <errorMessage>Date Committed is required when Priority is First Call Resolution.</errorMessage>
</ValidationRule>