unpackaged/main/default/objects/Case/validationRules/Case_Required_Priority.validationRule-meta.xml
<ValidationRule>
    <fullName>Case_Required_Priority</fullName>
    <active>false</active>
    <description>Value in Priority field needs to be other than --None--</description>
    <errorConditionFormula>ISPICKVAL(Priority,&#39;--None--&#39;)</errorConditionFormula>
    <errorMessage>Please select a value other than --None-- for Priority.</errorMessage>
</ValidationRule>