unpackaged/main/default/objects/Case/validationRules/Only_Owner_Can_Reopen_Case.validationRule-meta.xml
<ValidationRule>
    <fullName>Only_Owner_Can_Reopen_Case</fullName>
    <active>false</active>
    <errorConditionFormula>AND( 
 ISCHANGED( Status ) ,
 TEXT( Status ) &lt;&gt; &#39;Closed&#39;,
 TEXT( PRIORVALUE( Status ) ) = &#39;Closed&#39; ,
 $User.Id  &lt;&gt;  OwnerId )</errorConditionFormula>
    <errorMessage>Only owner of the case can reopen it.</errorMessage>
</ValidationRule>