unpackaged/main/default/objects/Case/validationRules/US_Case_Close_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>US_Case_Close_Required_Fields</fullName>
    <active>true</active>
    <description>On US Case Close, require Escalated To, Priority, Substatus and Show Status fields.</description>
    <errorConditionFormula>AND
(RecordType.DeveloperName = &quot;GES_US_Service&quot;,
ISPICKVAL(Status, &quot;Closed&quot;),

NOT(OR( 
$Profile.Name = &quot;GES Interface&quot;, 
$Profile.Name = &quot;Merge System Administrator&quot;, 
$Profile.Name = &quot;System Administrator&quot;
)),

(OR(
ISPICKVAL(Escalated_To__c,&quot;&quot;),
ISPICKVAL(Priority,&quot;&quot;),
ISPICKVAL(Substatus__c,&quot;&quot;),
ISPICKVAL(Show_Status__c,&quot;&quot;)))

)</errorConditionFormula>
    <errorMessage>Please fill in the required fields to close this case.</errorMessage>
</ValidationRule>