unpackaged/main/default/objects/Case/listViews/All_Onsite_Open_EMEA_related_cases.listView-meta.xml
<ListView>
    <fullName>All_Onsite_Open_EMEA_related_cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.CREATED_DATE_DATE_ONLY</columns>
    <columns>Reason__c</columns>
    <columns>Show_Opportunity__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>CASES.ORIGIN</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Case.GES_EMEA_Service</value>
    </filters>
    <filters>
        <field>CASES.STATUS</field>
        <operation>equals</operation>
        <value>In Process,Pending,Open</value>
    </filters>
    <filters>
        <field>EMEA_Onsite_Service_Request__c</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <label>All Onsite Open EMEA related cases</label>
    <sharedTo>
        <role>Account_Management_Nick_Humphrey</role>
        <role>Exhibitor_Services_Co_Ordinator</role>
        <role>GES_EMEA_Servi_Centre_Manager</role>
        <role>GES_EMEA_Servi_Centre_Supervisor</role>
        <role>SystemAdministrator</role>
    </sharedTo>
</ListView>