unpackaged/main/default/objects/Case/listViews/AllOpenCasesAge7Days.listView-meta.xml
<ListView>
    <fullName>AllOpenCasesAge7Days</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Exhibitor_Name__c</columns>
    <columns>NAME</columns>
    <columns>Show_Name__c</columns>
    <columns>Show_Open_Date__c</columns>
    <columns>Booth_Number__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Severe__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Substatus__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Age__c</field>
        <operation>greaterOrEqual</operation>
        <value>7</value>
    </filters>
    <label>All Open CS Inqs (Cases) 7 Days</label>
</ListView>