unpackaged/main/default/objects/Case/listViews/AllOpenCustomerServiceInquiries_Cases.listView-meta.xml
<ListView>
    <fullName>AllOpenCustomerServiceInquiries_Cases</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>ACCOUNT.NAME</columns>
    <columns>Customer_Name__c</columns>
    <columns>Exhibitor_Name__c</columns>
    <columns>NAME</columns>
    <columns>Show_Name__c</columns>
    <columns>Booth_Number__c</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>Severe__c</columns>
    <columns>OWNER_NAME</columns>
    <columns>Substatus__c</columns>
    <columns>Age__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CASES.STATUS</field>
        <operation>notEqual</operation>
        <value>Closed</value>
    </filters>
    <label>All Open Customer Service Inqs. (Cases)</label>
</ListView>