unpackaged/main/default/objects/Case/listViews/Ascential_Autumn_Fair_Case.listView-meta.xml
<ListView>
    <fullName>Ascential_Autumn_Fair_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Queue</filterScope>
    <filters>
        <field>Delegated_Owner__c</field>
        <operation>equals</operation>
    </filters>
    <label>Ascential Autumn Fair</label>
    <language>en_US</language>
    <queue>Ascential_Autumn_Fair</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>