unpackaged/main/default/objects/Case/listViews/Ascential_Holding_Case.listView-meta.xml
<ListView>
    <fullName>Ascential_Holding_Case</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Show_Opportunity__c</field>
        <operation>equals</operation>
        <value>AUTUMN-201709-NECUK</value>
    </filters>
    <filters>
        <field>CASES.ORIGIN</field>
        <operation>equals</operation>
        <value>Web</value>
    </filters>
    <filters>
        <field>OWNER_NAME</field>
        <operation>equals</operation>
        <value>Ascential Autumn Fair</value>
    </filters>
    <filters>
        <field>Delegated_Owner__c</field>
        <operation>notEqual</operation>
    </filters>
    <label>Ascential Holding</label>
    <language>en_US</language>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>