unpackaged/main/default/objects/Case/listViews/BMGQCE_202308_ECL_Case.listView-meta.xml
<ListView>
    <fullName>BMGQCE_202308_ECL_Case</fullName>
    <filterScope>Queue</filterScope>
    <label>BMGQCE-202308-ECL</label>
    <queue>BMGQCE_202308_ECL</queue>
    <sharedTo>
        <allInternalUsers />
    </sharedTo>
</ListView>