unpackaged/main/default/objects/Case/listViews/Case_Queue_SPAM.listView-meta.xml
<ListView>
    <fullName>Case_Queue_SPAM</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>Age__c</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CASES.ORIGIN</columns>
    <columns>CASES.CREATED_DATE</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <columns>Booth_Number__c</columns>
    <columns>Booth_Dimensions__c</columns>
    <filterScope>Queue</filterScope>
    <label>US-SPAM</label>
    <language>en_US</language>
    <queue>Case_Queue_SPAM</queue>
</ListView>